syntax = "proto3";

package agent;

// Agent service - receives commands from Master
service GridAgent {
    // Storage node management
    rpc SpawnNode(SpawnNodeRequest) returns (SpawnNodeResponse);
    rpc StopNode(StopNodeRequest) returns (StopNodeResponse);
    rpc GetNodeStatus(NodeStatusRequest) returns (NodeStatusResponse);
    rpc ListNodes(ListNodesRequest) returns (ListNodesResponse);
}

// ===== Spawn Node =====

message SpawnNodeRequest {
    string node_id = 1;
    string storage_path = 2;
    uint32 port = 3;
    uint64 memory_limit_mb = 4;
}

message SpawnNodeResponse {
    bool success = 1;
    string node_id = 2;
    uint32 port = 3;
    uint32 pid = 4;
    string error_message = 5;
}

// ===== Stop Node =====

message StopNodeRequest {
    string node_id = 1;
}

message StopNodeResponse {
    bool success = 1;
    string error_message = 2;
}

// ===== Node Status =====

message NodeStatusRequest {
    string node_id = 1;
}

message NodeStatusResponse {
    string node_id = 1;
    string status = 2;  // "running", "stopped", "failed"
    uint32 pid = 3;
    uint32 port = 4;
    string storage_path = 5;
    uint64 started_at = 6;
    uint32 restart_count = 7;
}

// ===== List Nodes =====

message ListNodesRequest {}

message ListNodesResponse {
    repeated NodeStatusResponse nodes = 1;
}
